# project-2

./: .env  .gitignore  API_GUIDE.md  API_PHASE1_FEATURES.md  COMPLETION_CHECKLIST.md  INDEX.md  PHASE_0_COMPLETION.md  PHASE_1_COMPLETION.md  README.md  RUNNING.md  SESSION_SUMMARY.md  UPGRADE_ROADMAP.txt  app.py  config.yaml  index.py  link.txt  pyproject.toml  requirements.txt  run_api.py  server.py  test_api.py
artifacts/: lightcurve_transformer_dummy.h5  lightcurve_transformer_dummy.json  sed_dummy.json  spectral_cnn_1758222593-bd9571.keras  spectral_cnn_dummy.json
dags/: README.md  stellar_training_dag.py  stellar_training_prefect.py
evaluations/: lightcurve_transformer_1758327605-b7a559_metrics.json  lightcurve_transformer_1758327605-b7a559_model_card.md  lightcurve_transformer_1758329458-0db34a_metrics.json  lightcurve_transformer_1758329458-0db34a_model_card.md  spectral_cnn_1758327590-2b613a_metrics.json  spectral_cnn_1758327590-2b613a_model_card.md  spectral_cnn_1758329404-0e3dfd_metrics.json  spectral_cnn_1758329404-0e3dfd_model_card.md
registry/lightcurve_transformer/: LATEST_VERSION
registry/sed/: LATEST_VERSION
registry/spectral_cnn/: LATEST_VERSION
scripts/: evaluate_cli.py  migrate_keras_format.py  smoke_test_api.py  train_cli.py
stellar_platform/: __init__.py
tests/: test_api.py  test_calibration.py  test_conformal.py  test_domain_shift.py  test_ensembles.py  test_frontend_smoke.py  test_lightcurve_preprocessing.py  test_lightcurve_processor.py  test_metrics.py  test_multitask.py  test_splitting.py
web/: app.js  index.html  styles.css
(+46 files in other folders)
